chore: add return type to /parsing_error + client gen
