# backend/editor/api.py
@@ -38,7 +38,7 @@ from .entries import TaxonomyGraph
 from .exceptions import GithubBranchExistsError, GithubUploadError
 
 # Data model imports
-from .models.node_models import EntryNodeCreate, Footer, Header, NodeType
+from .models.node_models import EntryNodeCreate, ErrorNode, Footer, Header, NodeType
 from .models.project_models import Project, ProjectEdit, ProjectStatus
 from .scheduler import scheduler_lifespan
 
@@ -311,7 +311,7 @@ async def find_footer(response: Response, branch: str, taxonomy_name: str):
 
 
 @app.get("/{taxonomy_name}/{branch}/parsing_errors")
-async def find_all_errors(request: Request, branch: str, taxonomy_name: str):
+async def find_all_errors(branch: str, taxonomy_name: str) -> ErrorNode:
     """
     Get all errors within taxonomy
     """
